# rust-napi-test

./: .gitignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: CI.yml
__test__/: index.spec.ts
benchmark/: bench.ts  fibonacci.ts
benchmarks/: fibonacci.js
src/: lib.rs
